--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-357.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
-  - {name: 🇸🇬 新加坡-1.14MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-200.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-431.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-423.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-266.3KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-223.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-267.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-248.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-232.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-257.3KB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-222.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-266.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-223.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.72MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.85MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-200.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-431.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-267.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-248.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
