--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-357.5KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.06MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-232.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-254.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-371.5KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
-  - {name: 🇸🇬 新加坡-257.3KB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-222.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-266.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-223.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.72MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-313.2KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.85MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-319.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-277.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-454.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇫🇷 法国-455.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-490.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-357.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-257.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-266.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-223.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-313.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
