--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.06MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇫🇷 法国-232.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-254.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-371.5KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林), server: 45.144.176.135, port: 3000, type: ss, cipher: aes-256-cfb, password: qazwsxplmjbufeefvgedgrwchgtrchrdgfbrdvgedecmmdfe}
-  - {name: 🇨🇳 中国-319.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-277.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-454.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇫🇷 法国-211.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-298.4KB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇸🇬 新加坡-181.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-223.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-302.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-455.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-490.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-344.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-364.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-347.5KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
-      - 🇫🇷 法国-232.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-391.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-277.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-454.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-211.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-298.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-181.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-223.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-302.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-455.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-490.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-344.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-364.2KB/s(Youtube:不良林)
+      - 🇮🇹 意大利-347.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
